--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,6 +31,12 @@
 
     <div class="row nav-bar d-flex align-items-center justify-content-center">
       
+        <div class="col-md-2">
+            <div class="logo-title">
+                <img src=""
+            </div>
+        </div>
+
     </div>
 
     <div class="container">{% block content %} {% endblock %}</div>
