--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,7 +33,8 @@
       
         <div class="col-md-2">
             <div class="logo-title">
-                <img src=""
+                <img src="{{ url_for('static', filename='images/logoimage.png') }}" alt="Logo">
+                ccento
             </div>
         </div>
 
