server is working and well

--- a/templates/learn.html
+++ b/templates/learn.html
@@ -1,21 +1,12 @@
 {% extends "layout.html" %}
 {% block content %}
 <h1 class="edit-h1">Wanna add a song? Submit it below! ✨</h1>
-<div class="col-md-3 edit-col">
-   <form id="song-form">
-      <input class="song-input" type="text" placeholder="Enter the song name: ">
-      <input class="artist-input" type="text" placeholder="Enter the artist name: ">
-      <input class="description-input" type="text" placeholder="Enter a description: ">
-      <input class="genres-input" type="text" placeholder="Enter the genres: ">
-      <input class="year-input" type="text" placeholder="Enter the year: ">
-      <input class="img-input" type="text" placeholder="Enter the image address:  ">
-      <input id="submit-btn" type="button" value="Submit">
-   </form>
-   
-   <div id="link-container"></div>
-
-   <div id="error-messages"></div>
-
+<div class="col-md-12 container">
+    <div class="col-md-6">
+        <h1 class="view-title">{{ item.country }}</h1>
+        <img class='song-img-view' src='{{ item.image }}' alt='Image relating to the country.'><br>
+    </div>
+  
 
 
 
