--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -2,5 +2,9 @@
 {% block content %}
 
 <h1 class="edit-h1">Where am I from? ✨</h1>
+<div class="col-md-12 container">
 
+</div>
 
+<script src="{{ url_for('static', filename='/songs.js') }}"></script>
+{% endblock %}
