--- a/static/main.css
+++ b/static/main.css
@@ -1,4 +1,16 @@
 /* All */
+.logo-navbar{
+}
+
+.logo-navbar-image{
+    height: 50px;
+    width: auto;
+}
+
+.logo-title{
+    font-size: 18px;
+}
+
 
 /* Homepage */
 
