--- a/templates/learn.html
+++ b/templates/learn.html
@@ -1,10 +1,15 @@
 {% extends "layout.html" %}
 {% block content %}
-<h1 class="edit-h1">Wanna add a song? Submit it below! ✨</h1>
+<h1 class="country-title">{{ item.country }}</h1>
 <div class="col-md-12 container">
     <div class="col-md-6">
-        <h1 class="view-title">{{ item.country }}</h1>
-        <img class='song-img-view' src='{{ item.image }}' alt='Image relating to the country.'><br>
+        <img class='country-image' src='{{ item.image }}' alt='Image relating to the country.'><br>
+    </div>
+    <div class="col-md-6 audio-container">
+        <img class='country-image' src='{{ item.image }}' alt='Image relating to the country.'><br>
+        
+    </div>
+    
     </div>
   
 
