--- a/static/main.css
+++ b/static/main.css
@@ -1,18 +1,39 @@
 /* All */
-.logo-navbar{
+.logo-navbar {
+    padding-left: 60px;
 }
 
-.logo-navbar-image{
-    height: 50px;
-    width: auto;
+.logo-navbar-image {
+  height: 65px;
+  width: auto;
 }
 
-.logo-title{
-    font-size: 18px;
+.logo-title {
+  font-size: 40px;
+  color: #a278d7;
 }
-
 
 /* Homepage */
+
+.homepage-bio{
+    font-size: 37px;
+    font-weight: bold;
+    padding-bottom: 50px;
+}
+
+.get-started-button {
+  width: 60%;
+  border: 1px solid;
+  padding: 15px;
+  display: block;
+  text-align: center;
+  background-color: #a278d7;
+}
+
+.get-started-title{
+    color: white;
+    font-weight: bold;
+}
 
 /* Leaning Page */
 
