--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,9 +31,9 @@
 
     <div class="row nav-bar">
       
-        <div class="col-md-2">
+        <div class="col-md-3 logo-navbar">
             <a class="nav-link" href="/">
-                <div class="logo-navbar">
+                <div>
                     <img src="{{ url_for('static', filename='images/logoimage.png') }}" alt="Logo" class="img-fluid logo-navbar-image">
                     <span class="logo-title">
                         ccento
