--- a/templates/layout.html
+++ b/templates/layout.html
@@ -44,6 +44,6 @@
 
     </div>
 
-    <div class="container">{% block content %} {% endblock %}</div>
+    <div class="container-layout">{% block content %} {% endblock %}</div>
   </body>
 </html>
