--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -2,9 +2,43 @@
 {% block content %}
 
 <h1 class="edit-h1">Where am I from? ✨</h1>
-<div class="col-md-12 container">
+<div id="quiz-container" class="container">
+    {% if item %}
+        <div class="quiz-flex-container">
+            <!-- Image on the left -->
+            <div class="quiz-image">
+                <img src="{{ url_for('static', filename='images/audioimage.jpg') }}" alt="Sound Wave" class="size_of_soundwave_image">
+            </div>
 
+            <!-- Quiz content on the right -->
+            <div class="quiz-content">
+                <form action="{{ url_for('quiz', quiz_id=quiz_id) }}" method="post">
+                    <div class="question">
+                        <h2>{{ item.audio_quiz | default("Listen to the audio and guess the country:") }}</h2>
+                        {% if item.audio_quiz %}
+                            <!-- If there is an audio component, display it -->
+                            <audio controls src="{{ url_for('static', filename=item.audio_quiz) }}">
+                                Your browser does not support the audio element.
+                            </audio>
+                        {% endif %}
+                    </div>
+                    <div class="options">
+                        {% for option in item.options %}
+                            <div>
+                                <input type="radio" id="option{{ loop.index }}" name="answer" value="{{ option }}">
+                                <label for="option{{ loop.index }}">{{ option }}</label>
+                            </div>
+                        {% endfor %}
+                    </div>
+                    <button type="submit">Next</button>
+                </form>
+            </div>
+        </div>
+    {% else %}
+        <p>No quiz data found.</p>
+    {% endif %}
 </div>
 
 <script src="{{ url_for('static', filename='/songs.js') }}"></script>
 {% endblock %}
+
