Created explore page

--- a/static/main.css
+++ b/static/main.css
@@ -34,7 +34,15 @@
     color: white;
     font-weight: bold;
 }
+/* Explore Page */
+.explore-title{
+    font-size: 60px;
+    font-weight: bold;
+    color: black;
+}
 
-/* Leaning Page */
+
+
+/* Learning Page */
 
 /* Quiz Page */
