--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -13,7 +13,7 @@
                 Your number one source for learning to detect hispanic accents
             </span>
 
-            <a class="btn get-started-button" href="/learn">
+            <a class="btn get-started-button" href="/explore">
                 <span class="get-started-title">
                     Get Started
                 </span>
