--- a/templates/learn.html
+++ b/templates/learn.html
@@ -17,7 +17,7 @@
     <p tips-text>{{item.tips}}</p>
 </div>
 <button class="next-button">
-    <a href="/learn/{{item.next_country}}" class="year-text"> Next</a>
+    <a href="/learn/{{next_country}}" class="year-text"> Next</a>
 
 </button></p>
 
