--- a/templates/explore.html
+++ b/templates/explore.html
@@ -8,4 +8,12 @@
     </span>
 </div>
 
+<div class="row d-flex flex-column align-items-center justify-content-center text-center">
+    <a class="btn get-started-button" href="/learn/1">
+        <span class="get-started-title">
+            Learn All
+        </span>
+    </a>  
+</div>
+
 {% endblock %}
