All button explore page

--- a/templates/explore.html
+++ b/templates/explore.html
@@ -16,4 +16,28 @@
     </a>  
 </div>
 
+<div class="row">
+    <div class="col-md-5">
+        <a class="btn get-started-button" href="/learn/1">
+            <span class="get-started-title">
+                Learn All
+            </span>
+        </a>  
+    </div>
+    <div class="col-md-5">
+        <a class="btn get-started-button" href="/learn/1">
+            <span class="get-started-title">
+                Learn All
+            </span>
+        </a>  
+    </div>
+    <div class="col-md-5">
+        <a class="btn get-started-button" href="/learn/1">
+            <span class="get-started-title">
+                Learn All
+            </span>
+        </a>  
+    </div>
+</div>
+
 {% endblock %}
