--- a/templates/explore.html
+++ b/templates/explore.html
@@ -9,30 +9,30 @@
 </div>
 
 <div class="row d-flex flex-column align-items-center justify-content-center text-center">
-    <a class="btn get-started-button" href="/learn/1">
-        <span class="get-started-title">
+    <a class="btn explore-all-button" href="/learn/1">
+        <span class="explore-all-title">
             Learn All
         </span>
     </a>  
 </div>
 
 <div class="row">
-    <div class="col-md-5">
-        <a class="btn get-started-button" href="/learn/1">
+    <div class="col-md-4 d-flex flex-column align-items-center justify-content-center text-center">
+        <a class="btn explore-country-button" href="/learn/1">
             <span class="get-started-title">
                 Learn All
             </span>
         </a>  
     </div>
-    <div class="col-md-5">
-        <a class="btn get-started-button" href="/learn/1">
+    <div class="col-md-4 d-flex flex-column align-items-center justify-content-center text-center">
+        <a class="btn explore-country-button" href="/learn/1">
             <span class="get-started-title">
                 Learn All
             </span>
         </a>  
     </div>
-    <div class="col-md-5">
-        <a class="btn get-started-button" href="/learn/1">
+    <div class="col-md-4 d-flex flex-column align-items-center justify-content-center text-center">
+        <a class="btn explore-country-button" href="/learn/1">
             <span class="get-started-title">
                 Learn All
             </span>
