Next and Quiz Buttons now work!

--- a/templates/learn.html
+++ b/templates/learn.html
@@ -7,20 +7,23 @@
         <img class='country-image' src='{{ item.image }}' alt='Image relating to the country.'><br>
     </div>
     <div class="col-md-6 audio-container">
-        <img class='country-image' src='{{ item.image }}' alt='Image relating to the country.'><br>
-        
-    </div>
-    
+        <!-- You can add audio elements here if needed -->
     </div>
 </div>
+
 <div class="col-md-12 tips-container">
     <p tips-text>{{item.tips}}</p>
 </div>
-<button class="next-button">
-    <a href="/learn/{{next_country}}" class="year-text"> Next</a>
 
-</button></p>
-
+{% if item.countries_id == "6" %}
+    <button class="next-button">
+        <a href="{{item.next_country}}" class="year-text">Take Quiz</a>
+    </button>
+{% else %}
+    <button class="next-button">
+        <a href="{{item.next_country}}" class="year-text">Next</a>
+    </button>
+{% endif %}
 
 <script src="{{ url_for('static', filename='/songs.js') }}"></script>
 {% endblock %}
