--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <h1 class="edit-h1">Where am I from? ✨</h1>
-<div id="quiz-container" class="quiz-container">
+<div id="quiz-container">
     {% if item %}
         <div class="quiz-flex-container">
             <!-- Image on the left -->
