--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -4,12 +4,9 @@
 <div id="quiz-container">
     {% if item %}
         <div class="row">
-            <!-- Image on the left using 4 out of 12 columns -->
             <div class="col-md-4">
                 <img src="{{ url_for('static', filename='images/audioimage.jpg') }}" alt="Sound Wave" class="img-fluid">
             </div>
-
-            <!-- Quiz content using 8 out of 12 columns -->
             <div class="col-md-8">
                 <h1 class="edit-h1">Where am I from? ✨</h1>
                 <form action="{{ url_for('quiz', quiz_id=quiz_id) }}" method="post">
@@ -31,6 +28,7 @@
                             </button>
                         {% endfor %}
                         <input type="hidden" name="answer" id="selectedAnswer">
+                        <input type="hidden" name="attempts" value="{{ attempts }}">
                     </div>
                     <button type="submit" class="btn btn-primary">Next</button>
                 </form>
