--- a/static/main.css
+++ b/static/main.css
@@ -86,8 +86,17 @@
 }
 
 /* Learning Page */
+.next-button{
+  border: 1px solid;
+  width: 40%;
+  padding: 15px;
+  display: block;
+  text-align: center;
+  background-color: #a278d7;
+  margin: 0 auto;
+  color: white;
+}
 .country-title {
-  background-color: blue;
   padding: 10px;
   text-align: center;
 }
@@ -99,7 +108,7 @@
   margin: 0 auto;
   display: flex;
   padding: 30px;
-  background-color: yellow;
+
 }
 .tips-container {
   text-align: center;
@@ -108,6 +117,10 @@
     margin: 0 auto;
 }
 
+.audio-button{
+    margin-top: 100px;
+    margin-right: 300px;
+}
 /* Quiz Page */
 
 
