--- a/templates/learn.html
+++ b/templates/learn.html
@@ -6,8 +6,11 @@
     <div class="col-md-6">
         <img class='country-image' src='{{ item.image }}' alt='Image relating to the country.'><br>
     </div>
-    <div class="col-md-6 audio-container">
-        <img class='country-image' src='{{ item.image }}' alt='Image relating to the country.'><br>
+    <div class="col-md-6 learn-audio-container">
+        <audio controls class="audio-button">
+            <source src="{{ url_for('static', filename='audio/' + audio_filename) }}" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
     </div>
 </div>
 
@@ -25,5 +28,10 @@
     </button>
 {% endif %}
 
-<script src="{{ url_for('static', filename='/songs.js') }}"></script>
+<script>
+    function playAudio() {
+        var audio = document.getElementById("myAudio");
+        audio.play();
+    }
+</script>
 {% endblock %}
