Made changes to quiz.html

--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -5,7 +5,7 @@
     {% if item %}
         <div class="row">
             <div class="col-md-4">
-                <img src="{{ url_for('static', filename='images/audioimage.jpg') }}" alt="Sound Wave" class="img-fluid">
+                <img src="{{ url_for('static', filename='images/audioimage.jpg') }}" alt="Sound Wave" class="img-fluid size_of_soundwave_image">
             </div>
             <div class="col-md-8">
                 <h1 class="edit-h1">Where am I from? ✨</h1>
