--- a/static/main.css
+++ b/static/main.css
@@ -147,15 +147,28 @@
 }
 
 .img-fluid.size_of_soundwave_image {
-  max-width: 250px; /* Maximum width of the image */
-  margin: 0 auto; /* Centers the image horizontally */
-  margin-top: 55px;
-  display: block; /* Ensures the image behaves as a block element */
+  max-width: 250px;  /* Maximum width of the image */
+  margin: 0 auto;  /* Centers the image horizontally */
+  margin-top: 55px; /* Provides top margin */
+  display: block;  /* Ensures the image behaves as a block element */
 }
+
+.quiz-audio-button {
+  width: 70%;  /* Makes the audio controls take the full width of its container */
+  display: block;  /* Ensures the audio controls behave as a block element */
+  margin: 20px auto;  /* Centers the audio horizontally and adds vertical spacing */
+}
+
 .option-button {
+  margin-top: 40px;
+  margin-left: 200px;
   max-width: 180px; /* Set the maximum width you prefer */
-  margin: 0 auto; /* Centers the button in the column */
+  
   display: block; /* Necessary to allow margin: auto to center the button */
+}
+
+.audio-link-right-shift {
+  padding-left: 20px;  /* Or any other value that suits your layout */
 }
 
 
@@ -164,8 +177,27 @@
     font-size: 1.2em;
     color: red;  /* or a suitable color based on correct (green) or incorrect (red) */
     margin-top: 20px;
-  }
-  
+}
+
+.q-audio-and-image-formatting{
+  margin-top: 50px;
+
+
+}
+
+.score-container {
+  text-align: right;
+  padding-right: 20px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.btn-center {
+  margin-top: 50px;
+  margin-left: 265px;  /* This will center the button inside its container */
+}
+
+
 
 
 /* Score Page */
