--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -15,31 +15,30 @@
         </div>
         <div class="col-md-8">
             <h1 class="edit-h1">Where am I from? ✨</h1>
+            <div class="option-container">
+                <div class="score-and-question">
+                    <div>Question {{ current_question_number }} of {{ total_questions }}</div>
+                    <div>Score: {{ score }}</div>
+                </div>
+                {% for option in item.options %}
+                <button type="button" class="btn btn-outline-primary btn-block option-button" onclick="selectOption(this)">
+                    {{ option }}
+                </button>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+    <div class="row feedback-and-next">
+        <div class="col-12">
             <form action="{{ url_for('quiz', quiz_id=quiz_id) }}" method="post">
-                <div class="question">
-                    <h2>Listen to the audio and guess the country:</h2>
-                </div>
-                {% if feedback %}
-                <div class="alert alert-info">{{ feedback }}</div>
-                {% endif %}
-
-                <div class="option-container">
-                    <div class="score-container">Current Score: {{ score }}</div>
-                    {% for option in item.options %}
-                    <button type="button" class="btn btn-outline-primary btn-block option-button" onclick="selectOption(this)">
-                        {{ option }}
-                    </button>
-                    {% endfor %}
-                </div>
-
-                <div class="btn-center">
-                    <button type="submit" class="btn btn-primary">Next</button>
-                </div>
-
+                <button type="submit" class="btn btn-primary">Next</button>
                 <input type="hidden" name="answer" id="selectedAnswer">
                 <input type="hidden" name="attempts" value="{{ attempts }}">
-                <input type="hidden" name="score" value="{{ score }}">  <!-- Hidden score input -->
+                <input type="hidden" name="score" value="{{ score }}">
             </form>
+            {% if feedback %}
+            <div class="alert alert-info">{{ feedback }}</div>
+            {% endif %}
         </div>
     </div>
     {% else %}
