Added disabled button

--- a/static/main.css
+++ b/static/main.css
@@ -8,6 +8,8 @@
 
 }
 
+/*Three Font Sizes*/
+
 
 
 /* All */
@@ -82,8 +84,6 @@
     color: var(--our-purple);
     
 }
-
-
 
 .explore-quiz-button{
     width: 10%;
