--- a/templates/explore.html
+++ b/templates/explore.html
@@ -20,21 +20,21 @@
     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center text-center">
         <a class="btn explore-country-button" href="/learn/1">
             <span class="explore-country-title">
-                Colombia
+                Colombia 🇨🇴
             </span>
         </a>  
     </div>
     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center text-center">
         <a class="btn explore-country-button" href="/learn/2">
             <span class="explore-country-title">
-                Venezuela
+                Venezuela 🇻🇪
             </span>
         </a>  
     </div>
     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center text-center">
         <a class="btn explore-country-button" href="/learn/3">
             <span class="explore-country-title">
-                Argentina
+                Argentina 🇦🇷
             </span>
         </a>  
     </div>
@@ -44,21 +44,21 @@
     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center text-center">
         <a class="btn explore-country-button" href="/learn/4">
             <span class="explore-country-title">
-                Mexico
+                Mexico 🇲🇽
             </span>
         </a>  
     </div>
     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center text-center">
         <a class="btn explore-country-button" href="/learn/5">
             <span class="explore-country-title">
-                Puerto Rico 
+                Puerto Rico 🇵🇷
             </span>
         </a>  
     </div>
     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center text-center">
         <a class="btn explore-country-button" href="/learn/6">
             <span class="explore-country-title">
-                El Salvador
+                El Salvador 🇸🇻
             </span>
         </a>  
     </div>
