--- a/templates/explore.html
+++ b/templates/explore.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="row d-flex flex-column align-items-center justify-content-center text-center">
+<div class="row d-flex flex-column align-items-center justify-content-center text-center hola">
     <span class="explore-title">
         Explore Countries
     </span>
@@ -10,32 +10,24 @@
 
 <div class="row d-flex flex-column align-items-center justify-content-center text-center explore-page">
     <a class="btn explore-all-button" href="/learn/1">
-        <span class="explore-all-title">
             Learn All
-        </span>
     </a>  
 </div>
 
 <div class="row d-flex justify-content-center text-center explore-page">
     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center text-center">
         <a class="btn explore-country-button" href="/learn/1">
-            <span class="explore-country-title">
                 Colombia 🇨🇴
-            </span>
         </a>  
     </div>
     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center text-center">
         <a class="btn explore-country-button" href="/learn/2">
-            <span class="explore-country-title">
                 Venezuela 🇻🇪
-            </span>
         </a>  
     </div>
     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center text-center">
         <a class="btn explore-country-button" href="/learn/3">
-            <span class="explore-country-title">
                 Argentina 🇦🇷
-            </span>
         </a>  
     </div>
 </div>
@@ -43,32 +35,24 @@
 <div class="row d-flex justify-content-center text-center explore-page">
     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center text-center">
         <a class="btn explore-country-button" href="/learn/4">
-            <span class="explore-country-title">
                 Mexico 🇲🇽
-            </span>
         </a>  
     </div>
     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center text-center">
         <a class="btn explore-country-button" href="/learn/5">
-            <span class="explore-country-title">
                 Puerto Rico 🇵🇷
-            </span>
         </a>  
     </div>
     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center text-center">
         <a class="btn explore-country-button" href="/learn/6">
-            <span class="explore-country-title">
                 El Salvador 🇸🇻
-            </span>
         </a>  
     </div>
 </div>
 
 <div class="row d-flex flex-column align-items-center justify-content-center text-center explore-page">
     <a class="btn explore-quiz-button" href="/quiz/1">
-        <span class="explore-quiz-title">
             Quiz me
-        </span>
     </a>  
 </div>
 
