--- a/templates/learn.html
+++ b/templates/learn.html
@@ -10,7 +10,7 @@
 
 
 <div class="col-md-12 learn-container">
-    <div class="col-md-4">
+    <div class="col-md-4 country-image-container">
         <img class='country-image' src='{{ item.image }}' alt='Image relating to the country.'><br>
     </div>
     <div class="col-md-4 learn-audio-container">
@@ -19,7 +19,7 @@
             Your browser does not support the audio element.
         </audio>
         <audio controls class="audio-button">
-            <source src="{{ url_for('static', filename='audio/' + audio_filename) }}" type="audio/mpeg">
+            <source src="{{ url_for('static', filename='audio/' + audio_filename2) }}" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
         <div class="tips-container">
@@ -33,13 +33,14 @@
 </div>
 
 {% if item.countries_id == "6" %}
-    <button class="next-button col-md-4">
-        <a href="{{item.next_country}}" class="next-button-text">Take Quiz</a>
-    </button>
+    <a class="btn next-button col-md-4" href="{{item.next_country}}">
+        Take Quiz
+    </a>
+ 
 {% else %}
-    <button class="next-button col-md-4">
-        <a href="{{item.next_country}}" class="next-button-text">Next</a>
-    </button>
+<a class="btn next-button col-md-4" href="{{item.next_country}}">
+    Next
+</a>
 {% endif %}
 
 <script>
