--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -1,52 +1,70 @@
-{% extends "layout.html" %}
-{% block content %}
+{% extends "layout.html" %} {% block content %}
 
 <div id="quiz-container">
-    {% if item %}
-    <div class="row">
-        <div class="col-md-4 q-audio-and-image-formatting">
-            <img src="{{ url_for('static', filename='images/audioimage.jpg') }}" alt="Sound Wave" class="img-fluid size_of_soundwave_image">
-            {% if item.audio_quiz %}
-            <audio controls class="quiz-audio-button">
-                <source src="{{ url_for('static', filename='audio/' + item.audio_quiz) }}" type="audio/mpeg">
-                Your browser does not support the audio element.
-            </audio>
-            {% endif %}
-        </div>
-
-        <div class="col-md-8">
-            <h1 class="edit-h1">Where am I from? ✨</h1>
-
-            <form action="{{ url_for('quiz', quiz_id=quiz_id) }}" method="post">
-                <div class="question">
-                    <!-- Details about the question could be dynamically loaded here too if needed -->
-                </div>
-                <div class="option-container">
-                    <div id="score-and-question" class="score-and-question">
-                        Question {{ current_question_number }} of {{ total_questions }} Score: {{ score }}
-                    </div>
-                    {% for option in item.options %}
-                    <button type="button" class="btn btn-outline-primary btn-block option-button option-top-margin">
-                        {{ option }}
-                    </button>
-                    {% endfor %}
-                </div>
-                <div id="feedback-and-next" class="feedback-and-next">
-                    <button id="submit-answer" class="next-button-style btn btn-primary" disabled>Next</button>
-                    {% if feedback %}
-                    <div id="feedback-container" class="alert alert-info feedback-style {{ feedback_class }}">{{ feedback }}</div>
-                    {% endif %}
-                </div>
-
-                <input type="hidden" name="answer" id="selectedAnswer">
-                <input type="hidden" name="attempts" value="{{ attempts }}">
-                <input type="hidden" name="score" value="{{ score }}">
-            </form>
-        </div>
+  {% if item %}
+  <div class="row">
+    <div class="col-md-4 q-audio-and-image-formatting">
+      <img
+        src="{{ url_for('static', filename='images/audioimage.jpg') }}"
+        alt="Sound Wave"
+        class="img-fluid size_of_soundwave_image"
+      />
+      {% if item.audio_quiz %}
+      <audio controls class="quiz-audio-button">
+        <source
+          src="{{ url_for('static', filename='audio/' + item.audio_quiz) }}"
+          type="audio/mpeg"
+        />
+        Your browser does not support the audio element.
+      </audio>
+      {% endif %}
     </div>
-    {% else %}
-    <p>No quiz data found.</p>
-    {% endif %}
+
+    <div class="col-md-8">
+      <h1 class="edit-h1">Where am I from? ✨</h1>
+
+      <div class="option-container">
+        <div id="score-and-question" class="score-and-question">
+          Question {{ current_question_number }} of {{ total_questions }} Score: {{ score }}
+        </div>
+
+        {% for option in item.options %}
+        <button type="button" id="option-button"
+          class="btn btn-outline-primary btn-block option-button option-top-margin"
+        >
+          {{ option }}
+        </button>
+        {% endfor %}
+      </div>
+
+      <div class="feedback-and-next">
+        <button
+          data-url="{{ url_for('quiz', quiz_id=quiz_id) }}"
+          id="submit-answer"
+          class="next-button-style btn btn-primary"
+          disabled
+        >
+          Submit
+        </button>
+        <button
+        id="next-question"
+        class="next-button-style btn btn-primary"
+        disabled
+      >
+        Next
+      </button>
+        <div id="feedback-container"></div>
+      </div>
+
+      <input type="hidden" name="answer" id="selectedAnswer" />
+      <input type="hidden" name="attempts" value="{{ attempts }}" />
+      <input type="hidden" name="score" value="{{ score }}" />
+      <div id="quiz-id" data-quiz-id="{{ quiz_id }}"></div>
+    </div>
+  </div>
+  {% else %}
+  <p>No quiz data found.</p>
+  {% endif %}
 </div>
 <script src="{{ url_for('static', filename='js/quiz.js') }}"></script>
 {% endblock %}
