--- a/static/main.css
+++ b/static/main.css
@@ -219,14 +219,26 @@
 }
 /* Quiz Page */
 
+.edit-h1{
+  text-align: center;
+  background: linear-gradient(to left, #a278d7, rgb(53, 182, 222), rgb(255, 0, 255));
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  font-size: 60px;
+  font-weight: bold;
+  margin-bottom: 30px;
+
+
+}
+.header-container-quiz{
+  display: flex;
+}
 
 .quiz_container {
   margin-top: 50px;
   display: flex;
-  justify-content: space-between; /* Aligns children to each side of the container */
-  align-items: center; /* Center align children vertically */
-  height: 100vh; /* Optional: Takes full viewport height */
-  padding: 20px; /* Adds some padding around the content */
+  text-align: center;
 }
 
 .option-top-margin{
@@ -236,41 +248,19 @@
   flex: 1; /* Allocates space for the image */
   max-width: 300px; /* Maximum width for the image */
 }
-
-.quiz-content {
-  flex: 2; /* More space allocated to quiz content */
-  text-align: center; /* Centers the text inside the content box */
-  padding: 20px; /* Padding inside the content box */
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Optional: Adds shadow for better focus */
-  border-radius: 10px; /* Optional: Rounds the corners */
-  max-width: 600px; /* Maximum width of the content box */
-}
-
 .img-fluid.size_of_soundwave_image {
   max-width: 250px;  /* Maximum width of the image */
   margin: 0 auto;  /* Centers the image horizontally */
   margin-top: 55px; /* Provides top margin */
   display: block;  /* Ensures the image behaves as a block element */
 }
-
-.quiz-audio-button {
-  width: 70%;  /* Makes the audio controls take the full width of its container */
-  display: block;  /* Ensures the audio controls behave as a block element */
-  margin: 20px auto;  /* Centers the audio horizontally and adds vertical spacing */
+.quiz-audio-button{
+  margin-left: 95px;
+  margin-top: 50px;
 }
 
-.option-button {
-  margin-top: 60px;
-  margin-left: 200px;
-  max-width: 250px; /* Set the maximum width you prefer */
-  padding-top: 20px;
-  padding-bottom: 20px;
-  color: var(--our-purple);
-  
-  font-weight: bolder;
-  
-  display: block; /* Necessary to allow margin: auto to center the button */
-}
+
+
 
 .audio-link-right-shift {
   padding-left: 20px;  /* Or any other value that suits your layout */
@@ -284,11 +274,7 @@
     margin-top: 20px;
 }
 
-.q-audio-and-image-formatting{
-  margin-top: 50px;
 
-
-}
 
 .score-container {
   text-align: right;
@@ -318,15 +304,24 @@
 /* BOTTOM CONTAINER W NEXT AND FEEDBACK*/
 .next-button-style {
   padding: 20px 150px;  /* Change size of the button */
-  
-  
   color:var(--our-purple);  /* Text color */
   background-color: white;
   border-radius: 5px;  /* Rounded corners */
   border-color: var(--our-purple);
-  margin-left: 175px;
   margin-top: 80px;
+  margin-left: 30px;
 }
+.next-and-submit-container{
+  text-align: center;
+  margin: 0 auto;
+  margin-top: -50px;
+  margin-right: 200px;
+}
+.feedback-and-next{
+  display: flex;
+  padding-bottom: 30px;
+}
+
 
 
 
@@ -349,16 +344,23 @@
 
 /* MULTIPLE CHOICE IN QUIZ*/
 .option-button {
-  border: 2px solid #b76cd7; /* Blue border for example */
+  border: 1px solid;
+  width: 50%;
+  padding: 20px;
+  display: block;
+  text-align: center;
   background-color: white;
-  
+  margin: 0 auto;
+  border-radius: 10px;
+  border-color: #a278d7;
+  color: #a278d7;
+  font-weight: bold;
+  font-size: 20px;
+  margin-bottom: 30px;
 }
-.option-button:hover {
- 
-  background-color: rgb(151, 209, 235);
-
+.option-button:hover{
+  background-color:#a278d7;
 }
-
 
 
 
