--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -1,8 +1,14 @@
 {% extends "layout.html" %} {% block content %}
 
-<div id="quiz-container">
+<div class="col-md-12 header-container-quiz">
+  <h1 class="section-tracker col-md-4"><p> <b class="bold-counter">Accent:</b> {{ current_question_number }} of {{ total_questions }}</p> </h1>
+  <h1 class="edit-h1 col-md-4">Quiz</h1>
+  <div id="score-and-question col-md-4" class="score-and-question">
+  <p><b class="bold-counter">Score:</b>{{ score }} </p>
+  </div>
+</div>
+<div class="row quiz-container">
   {% if item %}
-  <div class="row">
     <div class="col-md-4 q-audio-and-image-formatting">
       <img
         src="{{ url_for('static', filename='images/audioimage.jpg') }}"
@@ -10,61 +16,59 @@
         class="img-fluid size_of_soundwave_image"
       />
       {% if item.audio_quiz %}
-      <audio controls class="quiz-audio-button">
-        <source
-          src="{{ url_for('static', filename='audio/' + item.audio_quiz) }}"
-          type="audio/mpeg"
-        />
-        Your browser does not support the audio element.
-      </audio>
+        <audio controls class="quiz-audio-button">
+          <source
+            src="{{ url_for('static', filename='audio/' + item.audio_quiz) }}"
+            type="audio/mpeg"
+          />
+          Your browser does not support the audio element.
+        </audio>
       {% endif %}
     </div>
-
-    <div class="col-md-8">
-      <h1 class="edit-h1">Where am I from? ✨</h1>
-
+    <div class="col-md-4">
       <div class="option-container">
-        <div id="score-and-question" class="score-and-question">
-          Question {{ current_question_number }} of {{ total_questions }} Score: {{ score }}
-        </div>
-
         {% for option in item.options %}
-        <button type="button" id="option-button"
-          class="btn btn-outline-primary btn-block option-button option-top-margin"
-        >
-          {{ option }}
-        </button>
+          <button type="button"
+            class="btn btn-outline-primary btn-block option-button option-top-margin"
+          >
+            {{ option }}
+          </button>
         {% endfor %}
       </div>
-
-      <div class="feedback-and-next">
-        <button
-          data-url="{{ url_for('quiz', quiz_id=quiz_id) }}"
-          id="submit-answer"
-          class="next-button-style btn btn-primary"
-          disabled
-        >
-          Submit
-        </button>
-        <button
-        id="next-question"
-        class="next-button-style btn btn-primary"
-        disabled
-      >
-        Next
-      </button>
-        <div id="feedback-container"></div>
-      </div>
-
-      <input type="hidden" name="answer" id="selectedAnswer" />
-      <input type="hidden" name="attempts" value="{{ attempts }}" />
-      <input type="hidden" name="score" value="{{ score }}" />
-      <div id="quiz-id" data-quiz-id="{{ quiz_id }}"></div>
     </div>
-  </div>
+    <div class="col-md-4">
+      <div class="placeholder-hola"></div>
+    </div>
   {% else %}
-  <p>No quiz data found.</p>
+    <p class="no-quiz-data">No quiz data found.</p>
   {% endif %}
 </div>
+<div class="col-md-6 next-and-submit-container">
+  <div class="feedback-and-next">
+    <button
+      data-url="{{ url_for('quiz', quiz_id=quiz_id) }}"
+      id="submit-answer"
+      class="next-button-style btn btn-primary"
+      disabled
+    >
+      Submit
+    </button>
+    <button
+    id="next-question"
+    class="next-button-style btn btn-primary"
+    disabled
+  >
+    Next
+  </button>
+    <div id="feedback-container"></div>
+  </div>
+  
+  <input type="hidden" name="answer" id="selectedAnswer" />
+  <input type="hidden" name="attempts" value="{{ attempts }}" />
+  <input type="hidden" name="score" value="{{ score }}" />
+  <div id="quiz-id" data-quiz-id="{{ quiz_id }}"></div>
+  </div>
+</div>
+
 <script src="{{ url_for('static', filename='js/quiz.js') }}"></script>
 {% endblock %}
