--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -1,41 +1,43 @@
 {% extends "layout.html" %}
 {% block content %}
 
-<div class="col-md-12 header-container-quiz">
-  <h1 class="section-tracker col-md-4"><p> <b class="bold-counter">Accent:</b> {{ current_question_number }} of {{ total_questions }}</p> </h1>
-  <h1 class="edit-h1 col-md-4">Quiz</h1>
-  <div id="score-and-question col-md-4" class="score-and-question">
-  <p><b class="bold-counter">Score:</b>{{ score }} </p>
-  </div>
-</div>
-<div class="row quiz-container">
-  {% if item %}
-    <div class="col-md-4 q-audio-and-image-formatting">
-      <img
-        src="{{ url_for('static', filename='images/audioimage.jpg') }}"
-        alt="Sound Wave"
-        class="img-fluid size_of_soundwave_image"
-      />
-      {% if item.audio_quiz %}
-        <audio controls class="quiz-audio-button">
-          <source
-            src="{{ url_for('static', filename='audio/' + item.audio_quiz) }}"
-            type="audio/mpeg"
-          />
-          Your browser does not support the audio element.
-        </audio>
-      {% endif %}
+<div id="quiz-container">
+    {% if item %}
+    <!-- First Row: Title and Score Info -->
+    <div class="row">
+        <div class="col-md-12">
+            <h1 class="edit-h1">Where am I from? ✨</h1>
+            <div class="text-right">
+                <small>Question {{ current_question_number }} of {{ total_questions }} Score: {{ score }}</small>
+            </div>
+        </div>
     </div>
-    <div class="col-md-4">
-      <div class="option-container">
-        {% for option in item.options %}
-          <button type="button"
-            class="btn btn-outline-primary btn-block option-button option-top-margin"
-          >
-            {{ option }}
-          </button>
-        {% endfor %}
-      </div>
+
+    <!-- Second Row: Audio and Options -->
+    <div class="row">
+        <div class="col-md-3 q-audio-and-image-formatting">
+            {% if item.audio_quiz %}
+            <audio controls class="quiz-audio-button mb-2"> <!-- Margin-bottom between the two audio elements -->
+                <source src="{{ url_for('static', filename='audio/' + item.audio_quiz) }}" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
+            <audio controls class="quiz-audio-button">
+                <source src="{{ url_for('static', filename='audio/' + item.audio_quiz) }}" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
+            {% endif %}
+        </div>
+        <div class="col-md-9">
+            <form action="{{ url_for('quiz', quiz_id=quiz_id) }}" method="post">
+                <div class="option-container d-flex justify-content-center flex-wrap">
+                    {% for option in item.options %}
+                    <button type="button" class="btn btn-outline-primary option-button mx-2 my-1">
+                        {{ option }}
+                    </button>
+                    {% endfor %}
+                </div>
+            </form>
+        </div>
     </div>
 
     <!-- Third Row: Next Button and Feedback -->
@@ -58,32 +60,6 @@
     {% else %}
     <p class="no-quiz-data">No quiz data found.</p>
     {% endif %}
-</div>
-<div class="col-md-6 next-and-submit-container">
-  <div class="feedback-and-next">
-    <button
-      data-url="{{ url_for('quiz', quiz_id=quiz_id) }}"
-      id="submit-answer"
-      class="next-button-style btn btn-primary"
-      disabled
-    >
-      Submit
-    </button>
-    <button
-    id="next-question"
-    class="next-button-style btn btn-primary"
-    disabled
-  >
-    Next
-  </button>
-    <div id="feedback-container"></div>
-  </div>
-  
-  <input type="hidden" name="answer" id="selectedAnswer" />
-  <input type="hidden" name="attempts" value="{{ attempts }}" />
-  <input type="hidden" name="score" value="{{ score }}" />
-  <div id="quiz-id" data-quiz-id="{{ quiz_id }}"></div>
-  </div>
 </div>
 
 <script src="{{ url_for('static', filename='js/quiz.js') }}"></script>
